feat!: Hibernate version 7 update (#1803)